# Infrared2

./: .gitignore  Cargo.toml  LICENSE.md  README.md  cute.sh  old.txt
.cargo/: config.toml
benches/: bench.rs
dev/: book_gen.rs
src/: dat.rs  epd.rs  game.rs  gen_magics.rs  lib.rs  main.rs  opening.rs  parse.rs  syzygy.rs  tests.rs  uci.rs
src/board/: eval.rs  fen.rs  fend.rs  mod.rs  mov.rs  serde.rs  zobrist.rs
src/engine/: eval.rs  mod.rs  search.rs  time.rs  ttab.rs
src/search/: eval.rs  htab.rs  mod.rs  movegen.rs  ord.rs  time.rs  ttab.rs
tests/: arasan.txt  eret.txt  fine70.txt  wac.txt
