[package]
name = "infra"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level=3

[dependencies]
vampirc-uci = "0.11"
once_cell = "1.12"
rayon = "1.5"
crossbeam-channel = "0.5"

serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
ureq = "2.4"

# fastrand = "1.7"
# pgn-reader = "0.20"
# id_tree = "1.8"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
